scripts/standalone_minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-standalone
  namespace: minio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio-standalone
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: minio-standalone-ui
  namespace: minio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: minio-standalone
  sessionAffinity: None
  type: ClusterIP
