scripts/standalone_minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-standalone-ui
  namespace: minio
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: minio-standalone-ui.webapp.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-standalone-ui
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-standalone
  namespace: minio
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: minio-standalone.webapp.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-standalone
            port:
              number: 80
