scripts/standalone_minio/manifest.yaml
# to replace:
# webapp.me (base domain)
# ACCESS_KEY (optional)
# SECRET_KEY (optional)
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio
spec:
  finalizers:
  - kubernetes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-standalone
  namespace: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-standalone
  template:
    metadata:
      labels:
        app: minio-standalone
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: minio-storage
      containers:
      - name: minio-standalone
        image: minio/minio:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/live
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 9000
          protocol: TCP
        volumeMounts:
        - mountPath: "/data"
          name: data
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /minio/health/ready
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "8"
            memory: 20Gi
          requests:
            cpu: 200m
            memory: 2Gi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: minio-standalone
  namespace: minio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9000
  selector:
    app: minio-standalone
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-standalone
  namespace: minio
spec:
  gateways:
  - istio-gw
  hosts:
  - minio-standalone.webapp.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: minio-standalone.minio.svc.cluster.local
        port:
          number: 80
    timeout: 18000s
---
apiVersion: v1
kind: Service
metadata:
  name: minio-standalone-ui
  namespace: minio
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    app: minio-standalone
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-standalone-ui
  namespace: minio
spec:
  gateways:
  - istio-gw
  hosts:
  - minio-standalone-ui.webapp.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: minio-standalone-ui.minio.svc.cluster.local
        port:
          number: 80
    timeout: 18000s
