scripts/standalone_minio/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-standalone
  namespace: minio
spec:
  gateways:
  - istio-gw
  hosts:
  - minio-standalone.webapp.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: minio-standalone.minio.svc.cluster.local
        port:
          number: 80
    timeout: 18000s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-standalone-ui
  namespace: minio
spec:
  gateways:
  - istio-gw
  hosts:
  - minio-standalone-ui.webapp.me
  http:
  - retries:
      attempts: 5
      perTryTimeout: 3600s
    route:
    - destination:
        host: minio-standalone-ui.minio.svc.cluster.local
        port:
          number: 80
    timeout: 18000s
